Editable numeric and date cells
git-svn-id: https://horse.aplana.com/svn/SBRFACCTAX/trunk/taxaccounting@173 34aa7802-8fb0-764d-beb8-9b5b9d595954